--- a/riichi-app/src/App.css
+++ b/riichi-app/src/App.css
@@ -1,7 +1,22 @@
 #root {
-  margin: 0 auto;
-  padding: 1rem;
+  padding: 1rem 0;
   text-align: center;
+  display: inline-block;
+  width: 100%;
+}
+
+.icon-1 {
+  height: 100%;
+}
+
+.icon-2 {
+  width: 1em;
+  display: inline-block;
+  fill: currentColor;
+}
+
+.inv {
+  display: none;
 }
 
 h1 {
@@ -13,12 +28,17 @@ table {
   margin: 0 auto;
 }
 
-table, th, td {
-  border: 1px solid;
+.table-container {
+  width: 100%;
+  overflow: auto;
 }
 
 th {
   padding: 2px 10px;
+}
+
+.th-terminal {
+  background-color: #ffe599;
 }
 
 .th-num {
@@ -62,6 +82,16 @@ th {
   padding: 6px;
 }
 
+.tenbou-table {
+  margin: 30px auto;
+  font-weight: bold;
+}
+
+.ref-tenbou {
+  width: 300px;
+  padding: 6px;
+}
+
 .yaku-list {
   width: 50vw;
   max-width: 1280px;
@@ -100,6 +130,7 @@ th {
 
 .kan-group {
   padding: 0 4px 0 4px;
+  overflow: none;
 }
 
 .win-group {
@@ -144,13 +175,22 @@ th {
   color: #888;
 }
 
-@media only screen and (max-width: 940px) {
+@media only screen and (max-width: 1300px) {
+  table {
+    width: 100%;
+  }
+
   .yaku-list {
   width: 100%;
   margin: 0 auto;
   }
+
   .ref-tiles {
   width: 40px;
   padding: 6px;
+  }
+
+  .ref-tenbou {
+    width: 230px;
   }
 }
